istio/helloworld-minikube/hello-world.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  ports:
  - name: http
    port: 7777
---
apiVersion: v1
kind: Service
metadata:
  name: world
spec:
  selector:
    app: world-v1
  ports:
  - name: http
    port: 7778
